--- a/Views/TitusView.xaml
+++ b/Views/TitusView.xaml
@@ -4,11 +4,22 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Context_Processor.Views.TitusView">
-  <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="70">
-  	<Border Padding="15">
-  		<TextBlock Margin="10" Width="100" Height="20" HorizontalAlignment="Center">Загрузка</TextBlock>
-  	</Border>
-  	<TextBox Width="450" Height="25" />
-  	<Button Width="120" Height="25">Загрузить текст</Button>
+  <StackPanel Orientation="Vertical" Margin="10">
+    <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="50">
+    	<Border Padding="15">
+    		<TextBlock Margin="10" Width="100" Height="20" HorizontalAlignment="Center">Лексема</TextBlock>
+    	</Border>
+    	<TextBox Width="450" Height="40" />
+    	<Button Width="120" Height="40">Внести</Button>
+    </StackPanel>
+    <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="45">
+      <Border Padding="15">
+        <TextBlock Margin="10" Width="150" Height="20" HorizontalAlignment="Center">Количество контекстов</TextBlock>
+      </Border>
+      <NumericUpDown Width="80" Height="35" Value="0" Minimum="0"/>
+      <Button Width="120" Height="35">Внести</Button>
+    </StackPanel>
   </StackPanel>
+
+
 </UserControl>
