--- a/Views/TitusView.xaml
+++ b/Views/TitusView.xaml
@@ -27,7 +27,26 @@
         <NumericUpDown Width="420" Height="35" Value="0" Minimum="0"/>
         <Button Width="120" Height="35">Внести</Button>
       </StackPanel>
-      <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="45">           
+      <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="100">
+        <StackPanel HorizontalAlignment="Left" Orientation="Vertical" Width="595">
+          <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="10" Width="580" Height="25">
+            <Border Padding="15">
+              <TextBlock Margin="10" Width="170" Height="20" HorizontalAlignment="Left">Источник контекста</TextBlock>               
+            </Border>
+            <TextBox Width="350" Height="40" />
+          </StackPanel>
+          <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="23" Width="580" Height="25">
+            <Border Padding="15">
+              <TextBlock Margin="10" Width="157" Height="20" HorizontalAlignment="Left">Контекст</TextBlock>               
+            </Border>
+            <TextBox Width="350" Height="40" />
+          </StackPanel>
+        </StackPanel>
+        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+          <Border Padding="15">
+            <Button Width="130" Height="100">Добавить контекст</Button>
+          </Border>
+        </StackPanel>         
       </StackPanel>
       <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="50">
         <Border Padding="15">
