--- a/Views/TitusView.xaml
+++ b/Views/TitusView.xaml
@@ -2,77 +2,77 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="880"
+             mc:Ignorable="d" d:DesignWidth="1200" d:DesignHeight="1050"
              x:Class="Context_Processor.Views.TitusView">
-  
-    <StackPanel Orientation="Vertical" VerticalAlignment="Top" Margin="10">
-      <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="50">
-      	<Border Padding="15">
-      		<TextBlock Margin="10" Width="100" Height="20" HorizontalAlignment="Center">Единица</TextBlock>
-      	</Border>
-      	<TextBox Width="470" Height="40" />
-      	<Button Width="120" Height="40">Внести</Button>
-      </StackPanel>
-      <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="50">
-        <Border Padding="15">
-          <TextBlock Margin="10" Width="100" Height="20" HorizontalAlignment="Center">Семантика</TextBlock>
-        </Border>
-        <TextBox Width="470" Height="40" />
-        <Button Width="120" Height="40">Внести</Button>
-      </StackPanel>
-      <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="45">
-        <Border Padding="15">
-          <TextBlock Margin="10" Width="150" Height="20" HorizontalAlignment="Center">Количество контекстов</TextBlock>
-        </Border>
-        <NumericUpDown Width="420" Height="35" Value="0" Minimum="0"/>
-        <Button Width="120" Height="35">Внести</Button>
-      </StackPanel>
-      <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="100">
-        <StackPanel HorizontalAlignment="Left" Orientation="Vertical" Width="595">
-          <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="10" Width="580" Height="25">
-            <Border Padding="15">
-              <TextBlock Margin="10" Width="170" Height="20" HorizontalAlignment="Left">Источник контекста</TextBlock>               
-            </Border>
-            <TextBox Width="350" Height="40" />
-          </StackPanel>
-          <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="23" Width="580" Height="25">
-            <Border Padding="15">
-              <TextBlock Margin="10" Width="157" Height="20" HorizontalAlignment="Left">Контекст</TextBlock>               
-            </Border>
-            <TextBox Width="350" Height="40" />
-          </StackPanel>
+    <StackPanel Orientation="Horizontal" VerticalAlignment="Top">
+      <StackPanel Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10">
+        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="50">
+        	<Border Padding="15">
+        		<TextBlock Margin="10" Width="100" Height="20" HorizontalAlignment="Center">Единица</TextBlock>
+        	</Border>
+        	<TextBox Width="470" Height="40" />
+        	<Button Width="120" Height="40">Внести</Button>
         </StackPanel>
-        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="100">
           <Border Padding="15">
-            <Button Width="130" Height="100">Добавить контекст</Button>
+            <TextBlock Margin="10" Width="100" Height="60" HorizontalAlignment="Center">Семантика</TextBlock>
           </Border>
-        </StackPanel>         
+          <TextBox Width="470" Height="40" />
+          <Button Width="120" Height="40">Внести</Button>
+        </StackPanel>
+        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="45">
+          <Border Padding="15">
+            <TextBlock Margin="10" Width="150" Height="20" HorizontalAlignment="Center">Количество контекстов</TextBlock>
+          </Border>
+          <NumericUpDown Width="420" Height="35" Value="0" Minimum="0"/>
+          <Button Width="120" Height="35">Внести</Button>
+        </StackPanel>
+        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="250">
+          <StackPanel HorizontalAlignment="Left" Orientation="Vertical" Width="595">
+            <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="10" Width="580" Height="25">
+              <Border Padding="15">
+                <TextBlock Margin="10" Width="170" Height="20" HorizontalAlignment="Left">Источник контекста</TextBlock>               
+              </Border>
+              <TextBox Width="350" Height="40" />
+            </StackPanel>
+            <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="23" Width="580" Height="25">
+              <Border Padding="15">
+                <TextBlock Margin="10" Width="157" Height="20" HorizontalAlignment="Left">Контекст</TextBlock>               
+              </Border>
+              <TextBox Width="350" Height="80" />
+            </StackPanel>
+          </StackPanel>
+          <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+            <Border Padding="15">
+              <Button Width="130" Height="140">Добавить контекст</Button>
+            </Border>
+          </StackPanel>         
+        </StackPanel>
+        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="50">
+          <Border Padding="15">
+            <TextBlock Margin="10" Width="150" Height="20" HorizontalAlignment="Center">Основание для анализа</TextBlock>
+          </Border>
+          <TextBox Width="420" Height="40" />
+          <Button Width="120" Height="40">Внести</Button>
+        </StackPanel>
+        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="300">
+          <Border Padding="15">
+            <TextBlock Margin="10" Width="100" Height="20" HorizontalAlignment="Center">Анализ</TextBlock>
+          </Border>
+          <TextBox Width="470" Height="250" />
+          <Button Width="120" Height="125">Внести</Button>
+        </StackPanel>        
       </StackPanel>
-      <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="50">
-        <Border Padding="15">
-          <TextBlock Margin="10" Width="150" Height="20" HorizontalAlignment="Center">Основание для анализа</TextBlock>
-        </Border>
-        <TextBox Width="420" Height="40" />
-        <Button Width="120" Height="40">Внести</Button>
-      </StackPanel>
-      <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="140">
-        <Border Padding="15">
-          <TextBlock Margin="10" Width="100" Height="20" HorizontalAlignment="Center">Анализ</TextBlock>
-        </Border>
-        <TextBox Width="470" Height="125" />
-        <Button Width="120" Height="125">Внести</Button>
-      </StackPanel>
-      <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Vertical" Width="800" Height="270">
-        <Border Padding="5">
-          <TextBlock Margin="10" Width="100" Height="20" HorizontalAlignment="Center">Итог</TextBlock>
-        </Border>
-        <Border Padding="15">
-          <TextBox Width="650" Height="180" />
-        </Border>
-        <Button Width="725" Height="40">Внести итоговое значение</Button>
-      </StackPanel>
-
-    </StackPanel>    
+      <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Vertical" Width="400" Height="670">
+          <Border Padding="5">
+            <TextBlock Margin="10" Width="100" Height="20" HorizontalAlignment="Center">Итог</TextBlock>
+          </Border>
+          <Border Padding="15">
+            <TextBox Width="380" Height="500" />
+          </Border>
+          <Button Width="380" Height="40">Внести итоговое значение</Button>
+      </StackPanel>  
+    </StackPanel>  
   
   
 
