--- a/Views/TitusView.xaml
+++ b/Views/TitusView.xaml
@@ -19,14 +19,14 @@
               <TextBlock Margin="10" Width="100" Height="20" VerticalAlignment="Center" HorizontalAlignment="Center">Семантика</TextBlock>
             </Border>
             <TextBox Width="470" Height="40" AcceptsReturn="True" TextWrapping="Wrap" Name="SemanticsTextBox" IsReadOnly="true" />
-            <Button IsEnabled="false" Name="SemBtn" Width="120" Height="40">Внести</Button>
+            <Button IsEnabled="false" Name="SemBtn" Width="120" Height="40" Click="SemanticsInsert">Внести</Button>
           </StackPanel>
           <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="45">
             <Border Padding="15">
               <TextBlock Margin="10" Width="150" Height="20" HorizontalAlignment="Center">Количество контекстов</TextBlock>
             </Border>
-            <NumericUpDown Width="420" Height="35" Value="0" Minimum="0" IsReadOnly="true" />
-            <Button IsEnabled="false" Width="120" Height="35">Внести</Button>
+            <NumericUpDown Name="NumeralBox" Width="420" Height="35" Value="0" Minimum="0" IsReadOnly="true" />
+            <Button Name="NumBtn" IsEnabled="false" Width="120" Height="35">Внести</Button>
           </StackPanel>
           <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20" Orientation="Horizontal" Width="800" Height="152">
             <Border Padding="10">
