--- a/Views/TitusView.xaml
+++ b/Views/TitusView.xaml
@@ -61,8 +61,8 @@
             <Border Padding="10">
               <TextBlock Margin="10" Width="150" Height="20" HorizontalAlignment="Center">Основание для анализа</TextBlock>
             </Border>
-            <TextBox Width="380" Height="40" IsReadOnly="true" />
-            <Button IsEnabled="false" Width="120" Height="40">Внести</Button>
+            <TextBox Name="BasementTextBox" Width="380" Height="40" IsReadOnly="true" />
+            <Button Name="BasementBtn" IsEnabled="false" Width="120" Height="40">Внести</Button>
           </StackPanel>
           <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="200">
             <Border Padding="25">
