--- a/Views/TitusView.xaml
+++ b/Views/TitusView.xaml
@@ -62,14 +62,14 @@
               <TextBlock Margin="10" Width="150" Height="20" HorizontalAlignment="Center">Основание для анализа</TextBlock>
             </Border>
             <TextBox Name="BasementTextBox" Width="380" Height="40" IsReadOnly="true" />
-            <Button Name="BasementBtn" IsEnabled="false" Width="120" Height="40">Внести</Button>
+            <Button Name="BasementBtn" IsEnabled="false" Width="120" Height="40" Click="BasementInsert">Внести</Button>
           </StackPanel>
           <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="200">
             <Border Padding="25">
               <TextBlock Width="100" Height="20" HorizontalAlignment="Center">Анализ</TextBlock>
             </Border>
-            <TextBox Width="470" Height="150" IsReadOnly="true" />
-            <Button IsEnabled="false" Width="120" Height="40">Внести</Button>
+            <TextBox Name="AnalysisTextBox" Width="470" Height="150" IsReadOnly="true" />
+            <Button Name="AnalysisBtn" IsEnabled="false" Width="120" Height="40">Внести</Button>
           </StackPanel>        
         </StackPanel>
         <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Vertical" Width="300" Height="670">
