--- a/Views/TitusView.xaml
+++ b/Views/TitusView.xaml
@@ -69,7 +69,7 @@
               <TextBlock Width="100" Height="20" HorizontalAlignment="Center">Анализ</TextBlock>
             </Border>
             <TextBox Name="AnalysisTextBox" Width="470" Height="150" IsReadOnly="true" />
-            <Button Name="AnalysisBtn" IsEnabled="false" Width="120" Height="40">Внести</Button>
+            <Button Name="AnalysisBtn" IsEnabled="false" Width="120" Height="40" Click="AnalysisInsert">Внести</Button>
           </StackPanel>        
         </StackPanel>
         <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Vertical" Width="300" Height="670">
@@ -79,7 +79,7 @@
             <Border Padding="15">
               <TextBox Width="280" Height="620" AcceptsReturn="True" TextWrapping="Wrap" Name="FinalTextBox" IsReadOnly="true" />
             </Border>
-            <Button IsEnabled="false" Width="280" Height="40">Внести итоговое значение</Button>
+            <Button Name="FinalBtn" IsEnabled="false" Width="280" Height="40">Внести итоговое значение</Button>
         </StackPanel>  
       </StackPanel>
     </ScrollViewer>  
