--- a/Views/TitusView.xaml
+++ b/Views/TitusView.xaml
@@ -79,6 +79,7 @@
             <Border Padding="15">
               <TextBox Width="280" Height="620" AcceptsReturn="True" TextWrapping="Wrap" Name="FinalTextBox" IsReadOnly="true" />
             </Border>
+            <Button Name="EraseBtn" IsEnabled="false" Width="280" Height="40" Click="EraseAllFields">Стереть все поля</Button>
             <Button Name="XmlBtn" IsEnabled="false" Width="280" Height="40" Click="XMLInsert">Внести итоговое значение (XML)</Button>
             <Button Name="HtmlBtn" IsEnabled="false" Width="280" Height="40" Click="HTMLInsert">Внести итоговое значение(HTML)</Button>
         </StackPanel>  
