--- a/Views/TitusView.xaml
+++ b/Views/TitusView.xaml
@@ -9,10 +9,10 @@
         <StackPanel Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10">
           <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="600" Height="50">
           	<Border Padding="15">
-          		<TextBlock Text="{Binding unitLocalized}" Margin="10" Width="100" Height="20" HorizontalAlignment="Center"></TextBlock>
+          		<TextBlock Name="UnitBlock" Margin="10" Width="100" Height="20" HorizontalAlignment="Center"></TextBlock>
           	</Border>
           	<TextBox Width="470" Height="40" Name="UnitTextBox" />
-          	<Button Name="UnitBtn" Width="120" Height="40" Click="UnitInsert">Внести</Button>
+          	<Button Name="UnitBtn" Width="120" Height="40" Click="UnitInsert"></Button>
           </StackPanel>
           <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" Orientation="Horizontal" Width="800" Height="100">
             <Border Padding="15">
